# DjangoGrapheneVue

./: HISTORY.rst  README.rst  _version.py  cookiecutter.json  requirements_dev.txt
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .env.dd  .env.pp  .env.tc  .env.to  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  README.rst  deployandrun.sh  deploy{{cookiecutter.project_slug}}ui.sh  docker-compose-swarm.yml  docker-compose.yml  entrypoint.sh  env.to.example  generatemodels.sh  pyproject.toml
{{cookiecutter.project_slug}}/docs/: installation.rst
{{cookiecutter.project_slug}}/infra/docker/{{cookiecutter.project_slug}}/: Dockerfile  Dockerfile__  entrypoint.sh
{{cookiecutter.project_slug}}/src/: vite.config.ts.default
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}django/: format_index_html.py  requirements.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}django/config/: __init__.py  asgi.py  routers.py  schema.py  schemaFromModels.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}django/static/: index.html
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}django/{{cookiecutter.project_slug}}django/: app.py  models.py  urls.py  views.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
